package pt.ipp.isep.dei.esoft.project.domain;

public class Request {

    private Integer idRequest;

    private Property property;
    private TypeOfProperty typeOfProperty;
    private TransactionType transactionType;

    public static int idRequestCounter = 0;


    }

